test/functional/Sema/import_self.glu
//
// RUN: not gluc -c %s -o %t.o 2>&1 | FileCheck -v %s
//

// CHECK: 6:1: error: Cyclic import detected, module may be re-exporting itself
import import_self;
